--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="./static/lib/jquery/jquery.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
