--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>webapp</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache,must-revalidate">
+    <meta content="telphone=no,address=no" name="format-detection">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>淘米淘webapp</title>
+    <!-- IE8,IE9 SUPPORT HTML5 AND CSS3 -->
+    <!--[if lte IE 8]>
+      <script type="text/javascript" scr="./static/lib/selectivizr/selectivizr-min.js"></script>
+    <![endif]-->
+    <!--[if lt IE 9]>
+        <script src="https://cdn.bootcss.com/livingston-css3-mediaqueries-js/1.0.0/css3-mediaqueries.min.js"></script>
+        <script src="https://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" href="./static/css/app.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="./static/lib/jquery/jquery.min.js"></script>
+    <script src="./static/lib/jquery/jquery.min.js"></script>
+    <script src="./static/lib/hammer/hammer.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
