--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <script src="https://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <![endif]-->
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./static/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
-    <link rel="stylesheet" href="./static/css/app.css">
+    <link type="text/css" rel="stylesheet" href="/static/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="/static/css/app.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="./static/lib/jquery/jquery.min.js"></script>
-    <script src="./static/lib/materialize/js/materialize.min.js"></script>
-    <script src="./static/lib/hammer/hammer.min.js"></script>
+    <script src="/static/lib/jquery/jquery.min.js"></script>
+    <script src="/static/lib/materialize/js/materialize.min.js"></script>
+    <script src="/static/lib/hammer/hammer.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
